# asterics-cpp

./: .gitignore  CMakeLists.txt  README.md
ExampleOptimisation/: CMakeLists.txt  README.txt  compileTest.sh  pythonCheck.cmake  runExample.cmake
ExampleOptimisation/1-HadamardProduct/: CMakeLists.txt  main.cpp  main_intrinsics.cpp  main_vectorize.cpp
ExampleOptimisation/3-Saxpy/: CMakeLists.txt  main.cpp  main_intrinsics.cpp  main_vectorize.cpp
ExampleOptimisation/AstericsHPC/: CMakeLists.txt  asterics_alloc.cpp  asterics_alloc.h  asterics_hpc.h  timer.cpp  timer.h
ExampleOptimisation/AstericsHPC/astericshpc/: CMakeLists.txt  allocMatrixWrapper.cpp  allocMatrixWrapper.h  allocTableWrapper.cpp  allocTableWrapper.h  astericshpc.cpp  scriptCallPythonSetup.sh.cmake  setup.py  timerWrapper.cpp  timerWrapper.h
ExampleOptimisation/Performances/: CMakeLists.txt
